# denmark-academy-

./: .dockerignore  .env.example  .gitignore  AUDIO_FEATURE_SUMMARY.md  GIT_SETUP_INSTRUCTIONS.md  HEALTH_CHECK_REPORT.md  check_qdrant_data.py  pyproject.toml  requirements.txt
apps/api/: main.py
apps/api/routers/: account.py  adaptive_phase4.py  admin_phase2.py  ai_phase3.py  chapter_practice.py  current_affairs.py  dashboard_search.py  graph_phase6.py  (+4 more)
apps/worker_ai/: __init__.py  main.py
apps/worker_ingestion/: __init__.py  main.py
docs/: CURRENT_AFFAIRS_IMPLEMENTATION.md  PHASE_1_ARCHITECTURE.md  PHASE_1_RUNBOOK.md  PHASE_2_RUNBOOK.md  PHASE_3_AI_RUNBOOK.md  PHASE_4_ADAPTIVE_RUNBOOK.md  PHASE_5_KNOWLEDGE_AUTOMATION_RUNBOOK.md  PHASE_6_MENTOR_EXAM_GRAPH_RUNBOOK.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/components/: app-shell.tsx  auth-form.tsx  auth-provider.tsx  language-provider.tsx  library-motion.tsx  ui.tsx
frontend/lib/: api-base.ts  api.ts  interface-translations.ts  mock-quality.ts  progress-client.ts
frontend/types/: animejs.d.ts
infra/compose/: docker-compose.local.yml
infra/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
scripts/: build_chapter_practice_seed.py
tests/: test_blueprints.py  test_chapter_practice.py  test_current_affairs_quality.py  test_mock_exam_quality.py  test_phase2_schemas.py  test_phase3_ai.py  test_phase4_adaptive.py  test_phase5_knowledge.py  test_phase6_graph.py
(+29 files in other folders)
